# ForenSight

./: .gitignore  README.md  forensight_report.json  lare_report.html  main.py  pyproject.toml  requirements.txt  sample_output.json  server.py  setup.py  test_report.json  tool_db.json
dashboard/: index.html
forensight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scan_outputs/: forensight_2026-03-17T01-43-56.json  forensight_2026-03-17T01-46-02.json  forensight_2026-03-17T01-46-45.json  forensight_2026-03-17T01-48-53.json  forensight_2026-03-17T01-49-13.json  forensight_2026-03-17T01-52-24.json  forensight_2026-03-17T01-53-14.json  forensight_2026-03-17T01-54-01.json  forensight_2026-03-17T01-54-48.json  forensight_2026-03-17T04-20-16.json  forensight_2026-03-17T04-21-51.json
src/core/: log_analyzer.py  os_fingerprint.py  timeline_builder.py  tool_db.py  tool_detection.py  windows_tool_detection.py
src/intel/: lare.py
src/novelty/: mitre_mapper.py  persona_classifier.py  temporal_paradox.py
src/report/: narrative_engine.py
